--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div class="row">
         <div class="three columns">
-            <img src="img/photo.jpg" alt="[Фото]" width="210">
+          <img src="img/photo.jpg" alt="[Фото]" width="210">
         </div>
         <div class="four columns">
           <h5>О себе:</h5>
@@ -42,7 +42,7 @@
       </div>
       <div class="row">
         <div class="three columns">
-          <h4>Навыки:</h4>
+          <h5>Навыки:</h5>
           <ul>
             <li><strong>Ruby/Ruby on Rails</strong></li>
             <li><strong>HTML/CSS</strong></li>
@@ -55,14 +55,14 @@
           </ul>
         </div>
         <div class="four columns">
-          <h4>Языки:</h4>
+          <h5>Языки:</h5>
           <ul>
             <li><strong>Русский:</strong> родной</li>
             <li><strong>English:</strong> чтение технической документации</li>
           </ul>
         </div>
         <div class="five columns">
-          <h4>Образование:</h4>
+          <h5>Образование:</h5>
           <ul>
             <li>
               <strong><a href="http://spmi.ru/" target="_blank">Санкт-Петербургский Горный Университет</a></strong>
@@ -70,6 +70,49 @@
               <strong>факультет:</strong> нефтегазовый<br>
               <strong>специальность:</strong> разработка и эксплуатация нефтяных и газовых месторождений<br>
               <strong>квалификация:</strong> инженер
+            </li>
+          </ul>
+          <h5>Доп. образование:</h5>
+          <ul>
+            <li>
+              <strong><a href="http://rn-nki.ru/" target="_blank">Нефтеюганский корпоративный институт</a></strong>
+              <strong>июль 2010 &mdash; август 2010</strong><br>
+              <strong>квалификация:</strong> оператор по добыче нефти и газа 4-го разряда
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          <h4>Опыт работы:</h4>
+          <ul>
+            <li>
+              <strong>ООО "Роботизированный сервис скважин"</strong><br>
+              <em>ноябрь 2016 &mdash; настоящее время</em><br>
+              <strong>должность:</strong> инженер
+            </li>
+            <li>
+              <strong>АО "Связной Логистика"</strong><br>
+              <em>декабрь 2013 &mdash; ноябрь 2016</em><br>
+              <strong>должность:</strong><br>
+              <ul>
+                <li><em>май 2016 &mdash; ноябрь 2016</em> &mdash; кредитный специалист</li>
+                <li><em>март 2016 &mdash; апрель 2016</em> &mdash; менеджер по продажам</li>
+                <li><em>февраль 2015 &mdash; февраль 2016</em> &mdash; администратор торговой точки</li>
+                <li><em>декабрь 2014 &mdash; январь 2015</em> &mdash; менеджер по продажам</li>
+                <li><em>октябрь 2014 &mdash; ноябрь 2014</em> &mdash; кредитный специалист</li>
+                <li><em>декабрь 2013 &mdash; сентябрь 2014</em> &mdash; менеджер по продажам</li>
+              </ul>
+            </li>
+            <li>
+              <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
+              <em>август 2012 &mdash; сентябрь 2012</em><br>
+              <strong>должность:</strong> оператор по добыче нефти и газа 4-го разряда (стажировка в рамках летней практики университета)
+            </li>
+            <li>
+              <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
+              <em>июль 2011 &mdash; август 2011</em><br>
+              <strong>должность:</strong> техник (стажировка в рамках летней практики университета)
             </li>
           </ul>
         </div>
