--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="row">
         <div class="twelve columns">
-          <h4>Опыт работы:</h4>
+          <h4>Места работы:</h4>
           <ul>
             <li>
               <strong>ООО "Роботизированный сервис скважин"</strong><br>
