--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head lang="ru">
     <meta charset="utf-8">
-    <title>Резюме</title>
+    <title>Резюме - Александр Клименков</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   </head>
   <body>
@@ -20,7 +21,7 @@
         <div class="four columns">
           <h5>О себе:</h5>
           <ul>
-            <li><strong>возраст:</strong> 26 лет</li>
+            <li><strong>возраст:</strong> 27 лет</li>
             <li><strong>город:</strong> г.Санкт-Петербург</li>
           </ul>
           <h5>Контактные данные:</h5>
@@ -28,6 +29,7 @@
             <li><strong>телефон:</strong> +7-963-322-04-37</li>
             <li><strong>e-mail:</strong> <a href="mailto:prisioner@mail.ru">prisioner@mail.ru</a></li>
             <li><strong>github:</strong> <a href="https://github.com/prisioner" target="_blank">prisioner</a></li>
+            <li><strong>vk:</strong> <a href="https://vk.com/prisioner" target="_blank">prisioner</a></li>
           </ul>
         </div>
         <div class="five columns">
@@ -35,37 +37,84 @@
           <ul>
             <li><strong>занятость:</strong> полная занятость</li>
             <li><strong>рабочий день:</strong> полный рабочий день</li>
-            <li><strong>переезд:</strong> не готов к переезду</li>
-            <li><strong>командировки:</strong> не готов к командировкам</li>
+            <li><strong>переезд:</strong> обсуждаемо</li>
+            <li><strong>командировки:</strong> готов к нечастым командировкам</li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="twelve columns">
+          <h4>Навыки</h4>
+          <ul>
+            <li>
+              <strong>Ruby/Ruby on Rails</strong>
+              <ul class="horizontal">
+                <li>MVC</li>
+                <li>ООП</li>
+                <li>RSpec</li>
+                <li>REST</li>
+                <li>Code Style</li>
+              </ul>
+            </li>
+            <li>
+              <strong>Front-end</strong>
+              <ul class="horizontal">
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>Skeleton</li>
+                <li>Bootstrap</li>
+                <li>Slim</li>
+              </ul>
+            </li>
+            <li>
+              <strong>SQL</strong>
+              <ul class="horizontal">
+                <li>PostgreSQL</li>
+                <li>MySQL</li>
+                <li>SQLite</li>
+              </ul>
+            </li>
+            <li><strong>Git</strong></li>
+            <li>
+              <strong>DevOps</strong>
+              <ul class="horizontal">
+                <li>Capistrano</li>
+                <li>Heroku</li>
+                <li>Amazon Web Services</li>
+                <li>Google Cloud Platform</li>
+                <li>Redis</li>
+              </ul></li>
+            <li>
+              <strong>Linux</strong>
+              <ul class="horizontal">
+                <li>Ubuntu</li>
+              </ul></li>
+            <li>
+              <strong>Прочее</strong>
+              <ul class="horizontal">
+                <li>VBA</li>
+                <li>Delphi</li>
+                <li>PHP</li>
+              </ul>
+            </li>
           </ul>
         </div>
       </div>
       <div class="row">
         <div class="three columns">
-          <h5>Навыки:</h5>
-          <ul>
-            <li><strong>Ruby/Ruby on Rails</strong></li>
-            <li><strong>HTML/CSS</strong></li>
-            <li><strong>Javascript</strong></li>
-            <li><strong>SQL</strong></li>
-            <li><strong>Git</strong></li>
-            <li><strong>VBA</strong></li>
-            <li><strong>Delphi</strong></li>
-            <li><strong>PHP</strong></li>
-          </ul>
-        </div>
-        <div class="four columns">
           <h5>Языки:</h5>
           <ul>
             <li><strong>Русский:</strong> родной</li>
             <li><strong>English:</strong> чтение технической документации</li>
           </ul>
         </div>
-        <div class="five columns">
+        <div class="nine columns">
           <h5>Образование:</h5>
           <ul>
             <li>
-              <strong><a href="http://spmi.ru/" target="_blank">Санкт-Петербургский Горный Университет</a></strong>
+              <strong><a href="https://spmi.ru/" target="_blank">Санкт-Петербургский Горный Университет</a></strong>
               <strong>2008 &mdash; 2013</strong><br>
               <strong>факультет:</strong> нефтегазовый<br>
               <strong>специальность:</strong> разработка и эксплуатация нефтяных и газовых месторождений<br>
@@ -74,6 +123,10 @@
           </ul>
           <h5>Доп. образование:</h5>
           <ul>
+            <li>
+              <strong>Интенсив по Ruby on Rails от <a href="http://goodprogrammer.ru/" target="_blank">Хорошего программиста</a></strong>
+              <strong>июнь 2017 &mdash; октябрь 2017</strong><br>
+            </li>
             <li>
               <strong><a href="http://rn-nki.ru/" target="_blank">Нефтеюганский корпоративный институт</a></strong>
               <strong>июль 2010 &mdash; август 2010</strong><br>
@@ -87,8 +140,13 @@
           <h4>Места работы:</h4>
           <ul>
             <li>
+              <strong>ООО "Петролайф"</strong><br>
+              <em>ноябрь 2017 &mdash; настоящее время</em><br>
+              <strong>должность:</strong> инженер
+            </li>
+            <li>
               <strong>ООО "Роботизированный сервис скважин"</strong><br>
-              <em>ноябрь 2016 &mdash; настоящее время</em><br>
+              <em>ноябрь 2016 &mdash; октябрь 2017</em><br>
               <strong>должность:</strong> инженер
             </li>
             <li>
