--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
           <img src="img/photo.jpg" alt="[Фото]" width="210">
         </div>
         <div class="four columns">
-          <h5>О себе:</h5>
+          <h5>О себе</h5>
           <ul>
             <li><strong>возраст:</strong> 27 лет</li>
             <li><strong>город:</strong> г.Санкт-Петербург</li>
           </ul>
-          <h5>Контактные данные:</h5>
+          <h5>Контактные данные</h5>
           <ul>
             <li><strong>телефон:</strong> +7-963-322-04-37</li>
             <li><strong>e-mail:</strong> <a href="mailto:prisioner@mail.ru">prisioner@mail.ru</a></li>
@@ -33,7 +33,7 @@
           </ul>
         </div>
         <div class="five columns">
-          <h5>О вакансии:</h5>
+          <h5>О вакансии</h5>
           <ul>
             <li><strong>занятость:</strong> полная занятость</li>
             <li><strong>рабочий день:</strong> полный рабочий день</li>
@@ -43,7 +43,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="twelve columns">
+        <div class="seven columns">
           <h4>Навыки</h4>
           <ul>
             <li>
@@ -82,7 +82,7 @@
               <ul class="horizontal">
                 <li>Capistrano</li>
                 <li>Heroku</li>
-                <li>Amazon Web Services</li>
+                <li>Amazon WS</li>
                 <li>Google Cloud Platform</li>
                 <li>Redis</li>
               </ul></li>
@@ -101,53 +101,52 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="row">
-        <div class="three columns">
-          <h5>Языки:</h5>
-          <ul>
-            <li><strong>Русский:</strong> родной</li>
-            <li><strong>English:</strong> чтение технической документации</li>
-          </ul>
-        </div>
-        <div class="nine columns">
-          <h5>Образование:</h5>
+        <div class="five columns">
+          <h4>Мои проекты</h4>
           <ul>
             <li>
-              <strong><a href="https://spmi.ru/" target="_blank">Санкт-Петербургский Горный Университет</a></strong>
-              <strong>2008 &mdash; 2013</strong><br>
-              <strong>факультет:</strong> нефтегазовый<br>
-              <strong>специальность:</strong> разработка и эксплуатация нефтяных и газовых месторождений<br>
-              <strong>квалификация:</strong> инженер
-            </li>
-          </ul>
-          <h5>Доп. образование:</h5>
-          <ul>
-            <li>
-              <strong>Интенсив по Ruby on Rails от <a href="http://goodprogrammer.ru/" target="_blank">Хорошего программиста</a></strong>
-              <strong>июнь 2017 &mdash; октябрь 2017</strong><br>
+              <a href="https://bestbbq.herokuapp.com/" target="_blank">Организатор событий</a><br>
+              (<a href="https://github.com/Prisioner/bbq" target="_blank">Исходный код и описание</a>)
             </li>
             <li>
-              <strong><a href="http://rn-nki.ru/" target="_blank">Нефтеюганский корпоративный институт</a></strong>
-              <strong>июль 2010 &mdash; август 2010</strong><br>
-              <strong>квалификация:</strong> оператор по добыче нефти и газа 4-го разряда
+              <a href="https://askmeplz.herokuapp.com/" target="_blank">Вопросы и ответы</a> (аналог ask.fm)<br>
+              (<a href="https://github.com/Prisioner/askme" target="_blank">Исходный код и описание</a>)
             </li>
           </ul>
         </div>
       </div>
       <div class="row">
         <div class="twelve columns">
-          <h4>Места работы:</h4>
+          <h4>Опыт работы</h4>
           <ul>
+            <li>
+              <a href="http://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a><br>
+              <em>январь 2018 &mdash; настоящее время</em><br>
+              <strong>должность:</strong> помощник преподавателя<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Помощь студентам курса, ответы на вопросы, помощь в разрешении проблем, возникших в процессе обучения</li>
+              </ul>
+            </li>
             <li>
               <strong>ООО "Петролайф"</strong><br>
               <em>ноябрь 2017 &mdash; настоящее время</em><br>
-              <strong>должность:</strong> инженер
+              <strong>должность:</strong> инженер<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Сбор, аналитика, классификация и систематизация информации заданной тематики + курирование работы других сотрудников по данному направлению (до 5 сотрудников в подчинении)</li>
+                <li>Принятие участия в разработке стартапа в роли технического специалиста и junior-разработчика Ruby on Rails</li>
+              </ul>
             </li>
             <li>
               <strong>ООО "Роботизированный сервис скважин"</strong><br>
-              <em>ноябрь 2016 &mdash; октябрь 2017</em><br>
-              <strong>должность:</strong> инженер
+              <em>ноябрь 2016 &mdash; октябрь 2017 (вывод стартапа в самостоятельное юр.лицо)</em><br>
+              <strong>должность:</strong> инженер<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Сбор, аналитика, классификация и систематизация информации заданной тематики + курирование работы других сотрудников по данному направлению (до 5 сотрудников в подчинении)</li>
+                <li>Принятие участия в разработке стартапа в роли технического специалиста и junior-разработчика Ruby on Rails</li>
+              </ul>
             </li>
             <li>
               <strong>АО "Связной Логистика"</strong><br>
@@ -161,6 +160,20 @@
                 <li><em>октябрь 2014 &mdash; ноябрь 2014</em> &mdash; кредитный специалист</li>
                 <li><em>декабрь 2013 &mdash; сентябрь 2014</em> &mdash; менеджер по продажам</li>
               </ul>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Работа с клиентами</li>
+                <li>Прямые продажи</li>
+                <li>Ведение документооборота</li>
+                <li>Учет и хранение ТМЦ</li>
+                <li>Организация работы персонала на торговой точке (до 6 человек в подчинении)</li>
+              </ul>
+              <strong>достижения:</strong>
+              <ul>
+                <li>Победа в нескольких внутренних мотивационных конкурсах компании</li>
+                <li>Статус "эксперт" по отдельным внутренним направлениям (знание техники и учета)</li>
+                <li>Грамота "Лучший руководитель торговой точки" (ноябрь 2015)</li>
+              </ul>
             </li>
             <li>
               <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
@@ -171,6 +184,39 @@
               <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
               <em>июль 2011 &mdash; август 2011</em><br>
               <strong>должность:</strong> техник (стажировка в рамках летней практики университета)
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="three columns">
+          <h5>Языки</h5>
+          <ul>
+            <li><strong>Русский:</strong> родной</li>
+            <li><strong>English:</strong> чтение технической документации</li>
+          </ul>
+        </div>
+        <div class="nine columns">
+          <h5>Образование</h5>
+          <ul>
+            <li>
+              <strong><a href="https://spmi.ru/" target="_blank">Санкт-Петербургский Горный Университет</a></strong>
+              <strong>2008 &mdash; 2013</strong><br>
+              <strong>факультет:</strong> нефтегазовый<br>
+              <strong>специальность:</strong> разработка и эксплуатация нефтяных и газовых месторождений<br>
+              <strong>квалификация:</strong> инженер
+            </li>
+          </ul>
+          <h5>Доп. образование</h5>
+          <ul>
+            <li>
+              <strong>Интенсив по Ruby on Rails от <a href="http://goodprogrammer.ru/" target="_blank">Хорошего программиста</a></strong>
+              <strong>июнь 2017 &mdash; октябрь 2017</strong><br>
+            </li>
+            <li>
+              <strong><a href="http://rn-nki.ru/" target="_blank">Нефтеюганский корпоративный институт</a></strong>
+              <strong>июль 2010 &mdash; август 2010</strong><br>
+              <strong>квалификация:</strong> оператор по добыче нефти и газа 4-го разряда
             </li>
           </ul>
         </div>
