--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
               <a href="https://askmeplz.herokuapp.com/" target="_blank">Вопросы и ответы</a> (аналог ask.fm)<br>
               (<a href="https://github.com/Prisioner/askme" target="_blank">Исходный код и описание</a>)
             </li>
+            <li>Больше проектов в <a href="https://github.com/Prisioner" target="_blank">профиле на github</a></li>
           </ul>
         </div>
       </div>
@@ -122,7 +123,7 @@
             <li>
               <a href="http://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a><br>
               <em>январь 2018 &mdash; настоящее время</em><br>
-              <strong>должность:</strong> помощник преподавателя<br>
+              <strong>должность:</strong> помощник преподавателя в интенсиве по Ruby on Rails<br>
               <strong>обязанности:</strong>
               <ul>
                 <li>Помощь студентам курса, ответы на вопросы, помощь в разрешении проблем, возникших в процессе обучения</li>
