--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
               <ul class="horizontal">
                 <li>HTML5</li>
                 <li>CSS3</li>
-                <li>JavaScript</li>
+                <li>JS</li>
+                <li>CoffeeScript</li>
                 <li>jQuery</li>
                 <li>Skeleton</li>
                 <li>Bootstrap</li>
@@ -76,21 +77,33 @@
                 <li>SQLite</li>
               </ul>
             </li>
-            <li><strong>Git</strong></li>
+            <li>
+              <strong>Git</strong>
+              <ul class="horizontal">
+                <li>GitHub</li>
+                <li>GitLab</li>
+              </ul>
+            </li>
             <li>
               <strong>DevOps</strong>
               <ul class="horizontal">
                 <li>Capistrano</li>
+                <li>Docker</li>
+                <li>Rancher</li>
                 <li>Heroku</li>
-                <li>Amazon WS</li>
-                <li>Google Cloud Platform</li>
+                <li>AWS</li>
+                <li>GCP</li>
                 <li>Redis</li>
-              </ul></li>
+              </ul>
+            </li>
             <li>
-              <strong>Linux</strong>
+              <strong>Unix</strong>
               <ul class="horizontal">
                 <li>Ubuntu</li>
-              </ul></li>
+                <li>MacOS</li>
+                <li>CentOS</li>
+              </ul>
+            </li>
             <li>
               <strong>Прочее</strong>
               <ul class="horizontal">
@@ -102,17 +115,23 @@
           </ul>
         </div>
         <div class="five columns">
-          <h4>Мои проекты</h4>
+          <h4>Проекты</h4>
           <ul>
+            <li>Трейдинговая площадка</li>
+            <li>Сервис по заказу трансфера</li>
             <li>
-              <a href="https://bestbbq.herokuapp.com/" target="_blank">Организатор событий</a><br>
-              (<a href="https://github.com/Prisioner/bbq" target="_blank">Исходный код и описание</a>)
+              <a href="https://qkspace.com/" target="_blank">qkspace</a> (<a href="https://github.com/installero/qkspace/graphs/contributors" target="_blank">контрибьютор</a>)<br>
+              (<a href="https://github.com/installero/qkspace" target="_blank">Исходный код и описание</a>)
             </li>
             <li>
-              <a href="https://askmeplz.herokuapp.com/" target="_blank">Вопросы и ответы</a> (аналог ask.fm)<br>
-              (<a href="https://github.com/Prisioner/askme" target="_blank">Исходный код и описание</a>)
+              <a href="https://bestbbq.herokuapp.com/" target="_blank">Организатор событий</a> (учебный проект)<br>
+              (<a href="https://github.com/prisioner/bbq" target="_blank">Исходный код и описание</a>)
             </li>
-            <li>Больше проектов в <a href="https://github.com/Prisioner" target="_blank">профиле на github</a></li>
+            <li>
+              <a href="https://askmeplz.herokuapp.com/" target="_blank">Вопросы и ответы</a> (учебный проект)<br>
+              (<a href="https://github.com/prisioner/askme" target="_blank">Исходный код и описание</a>)
+            </li>
+            <li>Больше проектов в <a href="https://github.com/prisioner" target="_blank">профиле на github</a></li>
           </ul>
         </div>
       </div>
@@ -121,27 +140,35 @@
           <h4>Опыт работы</h4>
           <ul>
             <li>
-              <a href="http://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a><br>
+              <a href="http://404-group.com/" target="_blank"><strong>ООО "Биномо"</strong></a><br>
+              <em>апрель 2018 &mdash; настоящее время</em><br>
+              <strong>должность:</strong> Ruby-разработчик<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Интеграция по API со внешними сервисами</li>
+                <li>Написание API-интерфейсов для внутренних сервисов</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a><br>
               <em>январь 2018 &mdash; настоящее время</em><br>
-              <strong>должность:</strong> помощник преподавателя в интенсиве по Ruby on Rails<br>
+              <strong>должность:</strong><br>
+              <ul>
+                <li><em>ноябрь 2018 &mdash; настоящее время</em> &mdash; преподаватель</li>
+                <li><em>январь 2018 &mdash; октябрь 2018</em> &mdash; помощник преподавателя</li>
+              </ul>
               <strong>обязанности:</strong>
               <ul>
-                <li>Помощь студентам курса, ответы на вопросы, помощь в разрешении проблем, возникших в процессе обучения</li>
+                <li>Консультирование по учебным материалам</li>
+                <li>Code review учебных задач</li>
+                <li>Ответы на вопросы студентов курса</li>
+                <li>Помощь студентам курса в разрешении проблем, возникших в процессе обучения</li>
               </ul>
             </li>
             <li>
-              <strong>ООО "Петролайф"</strong><br>
-              <em>ноябрь 2017 &mdash; настоящее время</em><br>
-              <strong>должность:</strong> инженер<br>
-              <strong>обязанности:</strong>
-              <ul>
-                <li>Сбор, аналитика, классификация и систематизация информации заданной тематики + курирование работы других сотрудников по данному направлению (до 5 сотрудников в подчинении)</li>
-                <li>Принятие участия в разработке стартапа в роли технического специалиста и junior-разработчика Ruby on Rails</li>
-              </ul>
-            </li>
-            <li>
-              <strong>ООО "Роботизированный сервис скважин"</strong><br>
+              <strong>ООО "Роботизированный сервис скважин"</strong>, <a href="https://petrolife.org/" target="_blank"><strong>ООО "Петролайф"</strong></a><br>
               <em>ноябрь 2016 &mdash; октябрь 2017 (вывод стартапа в самостоятельное юр.лицо)</em><br>
+              <em>ноябрь 2017 &mdash; март 2018</em><br>
               <strong>должность:</strong> инженер<br>
               <strong>обязанности:</strong>
               <ul>
@@ -150,7 +177,7 @@
               </ul>
             </li>
             <li>
-              <strong>АО "Связной Логистика"</strong><br>
+              <a href="https://www.svyaznoy.ru/" target="_blank"><strong>АО "Связной Логистика"</strong></a><br>
               <em>декабрь 2013 &mdash; ноябрь 2016</em><br>
               <strong>должность:</strong><br>
               <ul>
@@ -177,12 +204,12 @@
               </ul>
             </li>
             <li>
-              <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
+              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>
               <em>август 2012 &mdash; сентябрь 2012</em><br>
               <strong>должность:</strong> оператор по добыче нефти и газа 4-го разряда (стажировка в рамках летней практики университета)
             </li>
             <li>
-              <strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong><br>
+              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>
               <em>июль 2011 &mdash; август 2011</em><br>
               <strong>должность:</strong> техник (стажировка в рамках летней практики университета)
             </li>
