--- a/index.html
+++ b/index.html
@@ -140,17 +140,7 @@
           <h4>Опыт работы</h4>
           <ul>
             <li>
-              <a href="http://404-group.com/" target="_blank"><strong>ООО "Биномо"</strong></a><br>
-              <em>апрель 2018 &mdash; настоящее время</em><br>
-              <strong>должность:</strong> Ruby-разработчик<br>
-              <strong>обязанности:</strong>
-              <ul>
-                <li>Интеграция по API со внешними сервисами</li>
-                <li>Написание API-интерфейсов для внутренних сервисов</li>
-              </ul>
-            </li>
-            <li>
-              <a href="https://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a><br>
+              <a href="https://goodprogrammer.ru/" target="_blank"><strong>Хороший Программист</strong></a> (удаленно, part-time)<br>
               <em>январь 2018 &mdash; настоящее время</em><br>
               <strong>должность:</strong><br>
               <ul>
@@ -163,6 +153,16 @@
                 <li>Code review учебных задач</li>
                 <li>Ответы на вопросы студентов курса</li>
                 <li>Помощь студентам курса в разрешении проблем, возникших в процессе обучения</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://binomo.com/" target="_blank"><strong>ООО "Биномо"</strong></a> (<a href="http://404-group.com/" target="_blank"><strong>404 Group</strong></a>)<br>
+              <em>апрель 2018 &mdash; апрель 2019</em><br>
+              <strong>должность:</strong> Ruby-разработчик<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Интеграция по API со внешними сервисами</li>
+                <li>Написание API-интерфейсов для внутренних сервисов</li>
               </ul>
             </li>
             <li>
