--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 <li>ООП</li>
                 <li>RSpec</li>
                 <li>REST</li>
+                <li>Carrierwave</li>
+                <li>VCR</li>
                 <li>Code Style</li>
               </ul>
             </li>
@@ -93,6 +95,7 @@
                 <li>Heroku</li>
                 <li>AWS</li>
                 <li>GCP</li>
+                <li>Nginx</li>
                 <li>Redis</li>
               </ul>
             </li>
