--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="four columns">
           <h5>О себе</h5>
           <ul>
-            <li><strong>возраст:</strong> 27 лет</li>
+            <li><strong>возраст:</strong> 28 лет</li>
             <li><strong>город:</strong> г.Санкт-Петербург</li>
           </ul>
           <h5>Контактные данные</h5>
@@ -37,7 +37,7 @@
           <ul>
             <li><strong>занятость:</strong> полная занятость</li>
             <li><strong>рабочий день:</strong> полный рабочий день</li>
-            <li><strong>переезд:</strong> обсуждаемо</li>
+            <li><strong>переезд:</strong> готов обсудить переезд в Москву</li>
             <li><strong>командировки:</strong> готов к нечастым командировкам</li>
           </ul>
         </div>
@@ -61,12 +61,11 @@
             <li>
               <strong>Front-end</strong>
               <ul class="horizontal">
+                <li>React</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>JS</li>
-                <li>CoffeeScript</li>
                 <li>jQuery</li>
-                <li>Skeleton</li>
                 <li>Bootstrap</li>
                 <li>Slim</li>
               </ul>
@@ -156,6 +155,15 @@
                 <li>Code review учебных задач</li>
                 <li>Ответы на вопросы студентов курса</li>
                 <li>Помощь студентам курса в разрешении проблем, возникших в процессе обучения</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://umbrellio.biz/" target="_blank"><strong>ООО "Амбреллио"</strong></a><br>
+              <em>апрель 2019 &dash; ноябрь 2019</em><br>
+              <strong>должность:</strong> Программист<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Работа над back-office / CRM системой</li>
               </ul>
             </li>
             <li>
