--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="four columns">
           <h5>О себе</h5>
           <ul>
-            <li><strong>возраст:</strong> 28 лет</li>
-            <li><strong>город:</strong> г.Санкт-Петербург</li>
+            <li><strong>возраст:</strong> 32 года</li>
+            <li><strong>город:</strong> г.Москва</li>
           </ul>
           <h5>Контактные данные</h5>
           <ul>
@@ -35,9 +35,10 @@
         <div class="five columns">
           <h5>О вакансии</h5>
           <ul>
-            <li><strong>занятость:</strong> полная занятость</li>
-            <li><strong>рабочий день:</strong> полный рабочий день</li>
-            <li><strong>переезд:</strong> готов обсудить переезд в Москву</li>
+            <li><strong>поиск работы:</strong> не ищу работу</li>
+<!--            <li><strong>занятость:</strong> полная занятость</li>-->
+<!--            <li><strong>рабочий день:</strong> полный рабочий день</li>-->
+            <li><strong>переезд:</strong> готов обсудить переезд в Санкт-Петербург</li>
             <li><strong>командировки:</strong> готов к нечастым командировкам</li>
           </ul>
         </div>
@@ -55,6 +56,7 @@
                 <li>REST</li>
                 <li>Carrierwave</li>
                 <li>VCR</li>
+                <li>RSwag</li>
                 <li>Code Style</li>
               </ul>
             </li>
@@ -90,7 +92,8 @@
               <ul class="horizontal">
                 <li>Capistrano</li>
                 <li>Docker</li>
-                <li>Rancher</li>
+                <li>Kubernetes</li>
+                <li>Gitlab CI</li>
                 <li>Heroku</li>
                 <li>AWS</li>
                 <li>GCP</li>
@@ -119,6 +122,9 @@
         <div class="five columns">
           <h4>Проекты</h4>
           <ul>
+            <li>Криптовалютная биржа</li>
+            <li>Биржа Forex</li>
+            <li>LMS</li>
             <li>Трейдинговая площадка</li>
             <li>Сервис по заказу трансфера</li>
             <li>
@@ -158,6 +164,44 @@
               </ul>
             </li>
             <li>
+              <strong>Криптовалютная биржа</strong><br>
+              <em>январь 2022 &dash; настоящее время</em><br>
+              <strong>должность:</strong> Программист<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Интеграция с различными блокчейнами</li>
+                <li>Работа над внутренними сервисами</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://www.karuna.group/" target="_blank"><strong>Karuna</strong></a><br>
+              <em>декабрь 2020 &dash; январь 2022</em><br>
+              <strong>должность:</strong> Программист<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Интеграция по API с внешними партнерами</li>
+                <li>Настройка GitlabCI, работа с Docker, Docker-compose, написание helm-чартов</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://www.amarkets.org/" target="_blank"><strong>AMarkets</strong></a><br>
+              <em>май 2020 &dash; декабрь 2020</em><br>
+              <strong>должность:</strong> Программист<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Интеграция по API с внешними партнерами</li>
+              </ul>
+            </li>
+            <li>
+              <a href="https://uchi.ru/" target="_blank"><strong>Uchi.ru</strong></a><br>
+              <em>декабрь 2019 &dash; февраль 2020</em><br>
+              <strong>должность:</strong> Программист<br>
+              <strong>обязанности:</strong>
+              <ul>
+                <li>Работа над back-end функционалом личных кабинетов пользователей системы</li>
+              </ul>
+            </li>
+            <li>
               <a href="https://umbrellio.biz/" target="_blank"><strong>ООО "Амбреллио"</strong></a><br>
               <em>апрель 2019 &dash; ноябрь 2019</em><br>
               <strong>должность:</strong> Программист<br>
@@ -167,7 +211,7 @@
               </ul>
             </li>
             <li>
-              <a href="https://binomo.com/" target="_blank"><strong>ООО "Биномо"</strong></a> (<a href="http://404-group.com/" target="_blank"><strong>404 Group</strong></a>)<br>
+              <a href="http://404-group.com/" target="_blank"><strong>404 Group</strong></a><br>
               <em>апрель 2018 &mdash; апрель 2019</em><br>
               <strong>должность:</strong> Ruby-разработчик<br>
               <strong>обязанности:</strong>
@@ -187,43 +231,43 @@
                 <li>Принятие участия в разработке стартапа в роли технического специалиста и junior-разработчика Ruby on Rails</li>
               </ul>
             </li>
-            <li>
-              <a href="https://www.svyaznoy.ru/" target="_blank"><strong>АО "Связной Логистика"</strong></a><br>
-              <em>декабрь 2013 &mdash; ноябрь 2016</em><br>
-              <strong>должность:</strong><br>
-              <ul>
-                <li><em>май 2016 &mdash; ноябрь 2016</em> &mdash; кредитный специалист</li>
-                <li><em>март 2016 &mdash; апрель 2016</em> &mdash; менеджер по продажам</li>
-                <li><em>февраль 2015 &mdash; февраль 2016</em> &mdash; администратор торговой точки</li>
-                <li><em>декабрь 2014 &mdash; январь 2015</em> &mdash; менеджер по продажам</li>
-                <li><em>октябрь 2014 &mdash; ноябрь 2014</em> &mdash; кредитный специалист</li>
-                <li><em>декабрь 2013 &mdash; сентябрь 2014</em> &mdash; менеджер по продажам</li>
-              </ul>
-              <strong>обязанности:</strong>
-              <ul>
-                <li>Работа с клиентами</li>
-                <li>Прямые продажи</li>
-                <li>Ведение документооборота</li>
-                <li>Учет и хранение ТМЦ</li>
-                <li>Организация работы персонала на торговой точке (до 6 человек в подчинении)</li>
-              </ul>
-              <strong>достижения:</strong>
-              <ul>
-                <li>Победа в нескольких внутренних мотивационных конкурсах компании</li>
-                <li>Статус "эксперт" по отдельным внутренним направлениям (знание техники и учета)</li>
-                <li>Грамота "Лучший руководитель торговой точки" (ноябрь 2015)</li>
-              </ul>
-            </li>
-            <li>
-              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>
-              <em>август 2012 &mdash; сентябрь 2012</em><br>
-              <strong>должность:</strong> оператор по добыче нефти и газа 4-го разряда (стажировка в рамках летней практики университета)
-            </li>
-            <li>
-              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>
-              <em>июль 2011 &mdash; август 2011</em><br>
-              <strong>должность:</strong> техник (стажировка в рамках летней практики университета)
-            </li>
+<!--            <li>-->
+<!--              <a href="https://www.svyaznoy.ru/" target="_blank"><strong>АО "Связной Логистика"</strong></a><br>-->
+<!--              <em>декабрь 2013 &mdash; ноябрь 2016</em><br>-->
+<!--              <strong>должность:</strong><br>-->
+<!--              <ul>-->
+<!--                <li><em>май 2016 &mdash; ноябрь 2016</em> &mdash; кредитный специалист</li>-->
+<!--                <li><em>март 2016 &mdash; апрель 2016</em> &mdash; менеджер по продажам</li>-->
+<!--                <li><em>февраль 2015 &mdash; февраль 2016</em> &mdash; администратор торговой точки</li>-->
+<!--                <li><em>декабрь 2014 &mdash; январь 2015</em> &mdash; менеджер по продажам</li>-->
+<!--                <li><em>октябрь 2014 &mdash; ноябрь 2014</em> &mdash; кредитный специалист</li>-->
+<!--                <li><em>декабрь 2013 &mdash; сентябрь 2014</em> &mdash; менеджер по продажам</li>-->
+<!--              </ul>-->
+<!--              <strong>обязанности:</strong>-->
+<!--              <ul>-->
+<!--                <li>Работа с клиентами</li>-->
+<!--                <li>Прямые продажи</li>-->
+<!--                <li>Ведение документооборота</li>-->
+<!--                <li>Учет и хранение ТМЦ</li>-->
+<!--                <li>Организация работы персонала на торговой точке (до 6 человек в подчинении)</li>-->
+<!--              </ul>-->
+<!--              <strong>достижения:</strong>-->
+<!--              <ul>-->
+<!--                <li>Победа в нескольких внутренних мотивационных конкурсах компании</li>-->
+<!--                <li>Статус "эксперт" по отдельным внутренним направлениям (знание техники и учета)</li>-->
+<!--                <li>Грамота "Лучший руководитель торговой точки" (ноябрь 2015)</li>-->
+<!--              </ul>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>-->
+<!--              <em>август 2012 &mdash; сентябрь 2012</em><br>-->
+<!--              <strong>должность:</strong> оператор по добыче нефти и газа 4-го разряда (стажировка в рамках летней практики университета)-->
+<!--            </li>-->
+<!--            <li>-->
+<!--              <a href="http://nng.gazprom-neft.ru/" target="_blank"><strong>ОАО "Газпромнефть-Ноябрьскнефтегаз"</strong></a><br>-->
+<!--              <em>июль 2011 &mdash; август 2011</em><br>-->
+<!--              <strong>должность:</strong> техник (стажировка в рамках летней практики университета)-->
+<!--            </li>-->
           </ul>
         </div>
       </div>
@@ -249,7 +293,11 @@
           <h5>Доп. образование</h5>
           <ul>
             <li>
-              <strong>Интенсив по Ruby on Rails от <a href="http://goodprogrammer.ru/" target="_blank">Хорошего программиста</a></strong>
+              <strong>Разработка на React от <a href="https://thinknetica.com/pro/react_basic" target="_blank">Thinknetica</a></strong>
+              <strong>апрель 2019 &mdash; июнь 2019</strong><br>
+            </li>
+            <li>
+              <strong>Интенсив по Ruby on Rails от <a href="https://goodprogrammer.ru/" target="_blank">Хорошего программиста</a></strong>
               <strong>июнь 2017 &mdash; октябрь 2017</strong><br>
             </li>
             <li>
